Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjBooleanRetnumber.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, number> yoda
        check
            number ret = yoda:useForce(one, two)
        detect e
            output "passed"
        end
     end
end
