Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjTextRetnumberFail.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        Text two
        two:SetValue("green")
        Yoda<Text, Text, number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
